<resources>

    <string name="app_name">Tip</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tip">Tip</string>
    <string name="equation"></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="twentyfive_percent">25%</string>
    <string name="thirty_percent">30%</string>
    <string name="backspace">←</string>

</resources>